--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
+ background-color: lightblue;
+}
 
+h3{
+  color: black;
+  font-size: 40px;
+  text-decoration: overline underline black 4px;
+  letter-spacing: -2px;
+  text-shadow: 4px 2px 10px blue;
+}
+
+img:hover {
+   transform: translate(0px, -10px);
 }
