--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
+ul {
+  list-style-type: none;
+  background-color: white;
+  width: 100%;
+  left: 0;
+  top: 0;
+  position: fixed;
+  padding: 8px;
+  opacity: .6;
+  margin: 0;
+   
+  }
+
+li {
+  display: inline;
+  padding: 10px 10px;
+}
+
+a {
+  text-decoration: none;
+  color: blue;
+  font-variant: small-caps;
+}
+
+li a: hover {
+  background-color: blue;
+  opacity: 1;
+  padding: 10px;
+}
+
+
+
 body {
  background-color: lightblue;
 }
