--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ ul {
   left: 0;
   top: 0;
   position: fixed;
-  padding: 8px;
+  padding: 11px;
   opacity: .6;
   margin: 0;
    
@@ -20,6 +20,7 @@ a {
   text-decoration: none;
   color: blue;
   font-variant: small-caps;
+  font-size: 25px;
 }
 
 li a: hover {
